# devtools-course-practice

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build-and-test.sh
lab-guide/: lab-1-setup.md  lab-2-library.md  lab-3-application.md
modules/Polkanov-Nikita-hypothec-calc/include/: hypothec_calculator.h
modules/Polkanov-Nikita-hypothec-calc/src/: CMakeLists.txt  hypothec_calculator.cxx
modules/Polkanov-Nikita-hypothec-calc/test/: CMakeLists.txt  test_hypothec_calculator.cpp
modules/arhipycheva-anastasia-elasticity/: CMakeLists.txt
modules/arhipycheva-anastasia-elasticity/include/: TElasticity.h
modules/arhipycheva-anastasia-elasticity/src/: CMakeLists.txt  Elasticity.cxx
modules/arhipycheva-anastasia-elasticity/test/: CMakeLists.txt  test_main.cpp  tests.cpp  tests_Elasticity.cpp
modules/baydina-olya-bitfield/include/: tbitfield.h  tset.h
modules/baydina-olya-bitfield/src/: tbitfield.cxx  tset.cxx
modules/baydina-olya-bitfield/test/: test_TSet.cpp  test_main.cpp  test_tbitfield.cpp
modules/belyaeva-daria-interpolation-sort/include/: InterpolationSearch.h
modules/belyaeva-daria-interpolation-sort/src/: CMakeLists.txt  InterpolSearch.cxx
modules/belyaeva-daria-interpolation-sort/test/: test_interpol_search.cpp  test_main.cpp
modules/dolotov-evgeniy-markdb/: CMakeLists.txt
modules/dolotov-evgeniy-markdb/include/: mark_database.h  mark_database_exception.h  record.h
modules/dolotov-evgeniy-markdb/src/: mark_database.cxx  mark_database_exception.cxx  record.cxx
modules/dolotov-evgeniy-markdb/test/: test_dolotov_evgeniy_mark_database.cpp  test_main.cpp
modules/gladilov-gleb-zcalc/application/: main.cpp
modules/gladilov-gleb-zcalc/include/: complexcalculator.h  complexcalculator_application.h
modules/gladilov-gleb-zcalc/src/: complexcalculator_application.cxx
modules/gladilov-gleb-zcalc/test/: CMakeLists.txt  test_complex_calculator.cpp  test_main.cpp
modules/goncharova-svetlana-parcer/: CMakeLists.txt
modules/goncharova-svetlana-parcer/include/: parcer.h
modules/goncharova-svetlana-parcer/src/: parcer.cxx
modules/goncharova-svetlana-pars/include/: pars.h
modules/goncharova-svetlana-pars/src/: pars.cxx
modules/goncharova-svetlana-pars/test/: test-pars.cpp  test_main.cpp
modules/hramov-ilya-quaternion/include/: quaternion.h
modules/hramov-ilya-quaternion/src/: quaternion.cxx
modules/hramov-ilya-quaternion/test/: test_hramov_ilya_quaternion.cpp  test_main.cpp
modules/hypothec-calc/include/: hypothec_calculator.h
modules/hypothec-calc/src/: hypothec_calculator.cxx
modules/hypothec-calc/test/: test_hypothec_calculator.cpp  test_main.cpp
modules/kochetova-dasha-sqr_eq/include/: sqr_eq.h
modules/kochetova-dasha-sqr_eq/src/: sqr_eq.cxx
modules/kochetova-dasha-sqr_eq/test/: test_main.cpp  test_sqr_eq.cpp
modules/kornyakov-kirill/: CMakeLists.txt  CTestTests.txt  README.md
modules/kornyakov-kirill-scalc/: CTestTests.txt
modules/kornyakov-kirill-scalc/application/: CTestTests.txt  calc.cpp
modules/kornyakov-kirill-scalc/include/: simplecalculator.h  simplecalculator_application.h
modules/kornyakov-kirill-scalc/src/: simplecalculator.cxx  simplecalculator_application.cxx
modules/kornyakov-kirill-scalc/test/: test_main.cpp  test_simplecalculator.cpp  test_simplecalculator_application.cpp
modules/kornyakov-kirill-zcalc/: CTestTests.txt  README.md
modules/kornyakov-kirill-zcalc/application/: CMakeLists.txt  main.cpp  zcalc.cpp
modules/kornyakov-kirill-zcalc/include/: complex_calculator.h  complex_number.h  complexcalculator_application.h
modules/kornyakov-kirill-zcalc/src/: complex_calculator.cxx  complex_number.cxx  complexcalculator.cxx
modules/kornyakov-kirill-zcalc/test/: test_Kulish_Sem_complex_number.cpp  test_arhipycheva_anastasial_complex_number.cpp  test_baydina_olga_complex_number.cpp  test_belyaeva_daria_complex_number.cpp  test_complex_application.cpp  test_complex_calculator.cpp  test_complex_number.cpp  test_dolotov_evgeniy_complex_number.cpp  test_goncharova_svetlana_complex_number.cpp  (+31 more)
modules/kornyakov-kirill/application/: CMakeLists.txt
modules/kornyakov-kirill/include/: simplecalculator.h  simplecalculator_application.h
modules/kornyakov-kirill/src/: CMakeLists.txt
modules/lebedev-ilya-rsearch/: README.md
modules/magazinnik-ivan-minesweeper/: CMakeLists.txt
modules/muminov-ruslan-fractioncalc/: CTestTests.txt
modules/murashov-michael-tstack/: CMakeLists.txt
modules/orlov-georgy-huffman_alg/src/: CMakeLists.txt  huffman_alg.cxx
modules/ovcharuk-oleg-queue/: README.md
modules/pcalc/: CTestTests.txt
modules/petrov-kirill-pcalc/: CMakeLists.txt
modules/podchischaeva-mary-todolist/: CMakeLists.txt
modules/pozdyaev-valery-cconverter/: CMakeLists.txt
modules/rumyantsev-alexander-vector3d/: CMakeLists.txt
modules/voevodin-andrew-color-converter/: CMakeLists.txt
modules/zhiltsov-max-volumes-calc/: CMakeLists.txt
(+202 files in other folders)
